--- a/contactus.html
+++ b/contactus.html
@@ -22,10 +22,30 @@
     </header>
 
     <main>
-        <section class="contact">
-            <h1>Contact Us</h1>
-            <p>Address: 123 Energy St, Drink City, ED 45678</p>
-            <p>Phone: +123-456-7890</p>
+
+        <section class="contact-form">
+            <div class="form-container">
+                <h2>Contact Us</h2>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
+
+        <section class="map">
+           
             <div class="map-container">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120377.78001115298!2d72.883469761505!3d19.05150212034447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c62b92374e21%3A0x83700db6d5e51b0!2sShivaji%20Nagar%2C%20Govandi%20East%2C%20Mumbai%2C%20Maharashtra%20400043%2C%20India!5e0!3m2!1sen!2sus!4v1620021458930!5m2!1sen!2sus"
